// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartRange /> should edit 1`] = `
<ChartForm
  chart={
    Object {
      "attribute": "system.type",
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={true}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should not render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "range",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={false}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should render properly 1`] = `
.emotion-24 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-23 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-5 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-4:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 6px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1 svg {
  opacity: 0;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2 {
  width: 2px;
}

.emotion-22 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-21 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-21 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-6 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 4px;
}

.emotion-7 {
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-16 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto Condensed;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-19:hover,
.emotion-19.focus-visible:focus {
  color: #ffffff;
}

.emotion-19:hover svg,
.emotion-19.focus-visible:focus svg {
  opacity: 1;
}

.emotion-19[aria-disabled=true] {
  color: #808080;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-24"
>
  <div
    className="emotion-23"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-1"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-2"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-1"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-22"
    >
      <div
        className="emotion-21"
      >
        <div>
          <div
            className="emotion-6"
          >
            count
          </div>
          <div
            className="emotion-7"
          >
            -
          </div>
        </div>
        <div>
          <div
            className="emotion-6"
          >
            min
          </div>
          <div
            className="emotion-7"
          >
            180
          </div>
        </div>
        <div>
          <div
            className="emotion-6"
          >
            max
          </div>
          <div
            className="emotion-7"
          >
            8,525
          </div>
        </div>
        <div>
          <div
            className="emotion-6"
          >
            avg
          </div>
          <div
            className="emotion-7"
          >
            899.569
          </div>
        </div>
        <div>
          <div
            className="emotion-6"
          >
            sum
          </div>
          <div
            className="emotion-7"
          >
            521,750
          </div>
        </div>
        <div>
          <div
            className="emotion-16"
          >
             
          </div>
          <div
            className="emotion-20"
          >
            <button
              aria-label="Add Filter"
              className="emotion-19"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-18"
              >
                <div
                  className="emotion-17"
                >
                  <svg
                    data-file-name="filter.svg"
                    height={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartRange /> should render properly without data 1`] = `
.emotion-14 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-13 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-5 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-4:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 6px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1 svg {
  opacity: 0;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2 {
  width: 2px;
}

.emotion-12 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-11 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-11 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-6 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto Condensed;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover,
.emotion-9.focus-visible:focus {
  color: #ffffff;
}

.emotion-9:hover svg,
.emotion-9.focus-visible:focus svg {
  opacity: 1;
}

.emotion-9[aria-disabled=true] {
  color: #808080;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-5"
    >
      <div
        className="emotion-4"
      >
        <h3
          className="emotion-0"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-1"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-2"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-1"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-11"
      >
        <div>
          <div
            className="emotion-6"
          >
             
          </div>
          <div
            className="emotion-10"
          >
            <button
              aria-label="Add Filter"
              className="emotion-9"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-8"
              >
                <div
                  className="emotion-7"
                >
                  <svg
                    data-file-name="filter.svg"
                    height={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
